--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+modemmanager (1.18.6-1~bpo11+1-wb1) bullseye-backports; urgency=medium
+
+  * Add SIM A7600E-H support
+    - CGDCONT read response with only 3 parameters in list (+CGDCONT: 1,"IP","nate.sktelecom.com") parsing.
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Fri, 22 Jul 2022 10:28:54 +0500
+
 modemmanager (1.18.6-1~bpo11+1) bullseye-backports; urgency=medium
 
   * Create backport for Debian 11.
