Fix CGDCONT read response parsing
SIM A760E-H sends only 3 parameters in CGDCONT read response (+CGDCONT: 1,"IP","nate.sktelecom.com").

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+modemmanager (1.18.12-1~bpo11+1-wb100) bullseye-backports; urgency=medium
+
+  * Add SIM A7600E-H support
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Fri, 28 Oct 2022 17:21:25 +0500
+
 modemmanager (1.18.12-1~bpo11+1) bullseye-backports; urgency=medium
 
   * Create backport for Debian 11.
