--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+modemmanager (1.18.10-2) UNRELEASED; urgency=medium
+
+  [ Matteo F. Vescovi <mfv@debian.org> 2022-09-07 ]
+  * debian/patches/: patchset updated (Closes: #1017794, #1018198)
+    - 0001-Fix_invalid_EXZ_error_parser.patch added
+    - 0002-Fix_issue_with_EOL_for_pcre2.patch added
+
+ --
+
 modemmanager (1.18.10-1) unstable; urgency=medium
 
   * New upstream version 1.18.10
