--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 modemmanager (1.20.0-1~bpo11+1-wb103) stable; urgency=medium
 
-  * Check, is changing primary sim slot actually needed.
+  * Check, is changing primary sim slot actually needed (simtech).
 
  -- Vladimir Romanov <v.romanov@wirenboard.com>  Thu, 20 Apr 2023 19:09:12 +0500
 
