--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+modemmanager (1.20.0-1~bpo11+1-wb103) stable; urgency=medium
+
+  * Check, is changing primary sim slot actually needed (simtech).
+
+ -- Vladimir Romanov <v.romanov@wirenboard.com>  Thu, 20 Apr 2023 19:09:12 +0500
+
 modemmanager (1.20.0-1~bpo11+1-wb102) stable; urgency=medium
 
   * Fix SMS sending on SIM A7600E-H.
@@ -11,7 +17,7 @@ modemmanager (1.20.0-1~bpo11+1-wb101) bullseye-backports; urgency=medium
     - CGDCONT read response with only 3 parameters in list (+CGDCONT: 1,"IP","nate.sktelecom.com") parsing.
     - add UDEV rules for SIM A7600E-H
     - add SIM card switching using libgpiod.
-      Add ID_MM_SIM_SWITCH_GPIO_LABEL UDEV parameter for GPIO controlling external SIM switching 
+      Add ID_MM_SIM_SWITCH_GPIO_LABEL UDEV parameter for GPIO controlling external SIM switching
     - fix CGDCONT read response with only 3 parameters in list (+CGDCONT: 1,"IP","nate.sktelecom.com") parsing.
     - set all +CRSM response timeouts to 20s
     - ignore PB DONE, SMS DONE, +NITZ: URCs
