--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+modemmanager (1.20.0-1~bpo11+1-wb104) stable; urgency=medium
+
+  * Add SIM A7602E-H support
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 05 May 2023 11:33:43 +0500
+
 modemmanager (1.20.0-1~bpo11+1-wb103) stable; urgency=medium
 
   * Check, is changing primary sim slot actually needed (simtech).
