--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+modemmanager (1.20.0-1~bpo11+1-wb105) stable; urgency=medium
+
+  * Increase SMS reading timeout to 120 seconds
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 10 May 2023 16:38:34 +0500
+
 modemmanager (1.20.0-1~bpo11+1-wb104) stable; urgency=medium
 
   * Add SIM A7602E-H support
