--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+modemmanager (1.20.0-1~bpo11+1-wb106) stable; urgency=medium
+
+  * Fix SIM A7602E-H SMS storage selection.
+    SIM A7602E-H resets SMS storages to default SM, if they are omitted in AT+CPMS write command. So always send all 3 parameters.
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 15 Jan 2024 11:14:20 +0500
+
 modemmanager (1.20.0-1~bpo11+1-wb105) stable; urgency=medium
 
   * Increase SMS reading timeout to 120 seconds
