--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+modemmanager (1.20.0-1~bpo11+1-wb107) stable; urgency=medium
+
+  * Add USSD support for SIM A7600E-H/A7602E-H
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 23 Jan 2024 16:01:45 +0500
+
 modemmanager (1.20.0-1~bpo11+1-wb106) stable; urgency=medium
 
   * Fix SIM A7602E-H SMS storage selection.
